syntax = 'proto3';

package protobuf;

option go_package = ".;protobuf";

service RequestAnalysis {
    rpc SendHASMinAnalysis (HASInfo) returns (ResponseHAS) {}
    rpc SendHASMaxAnalysis (HASInfo) returns (ResponseHAS) {}
    rpc SendLBAnalysis (LBInfo) returns (ResponseLB) {}
    rpc SendNetworkAnalysis (NodeInfo) returns (ReponseNetwork) {}
}

message HASInfo {
    string HPAName = 1;
    string HPANamespace = 2;
    string ClusterName = 3;
    map<string,int32> HASRebalancingCount = 4;
    map<string,int32> HPAMinORMaxReplicas = 5;
    map<string,int32> HPACurrentReplicas = 6;
}
message ResponseHAS {
    string TargetCluster = 1;
}

message LBInfo {
    repeated string ClusterNameList = 1;
    string ClientIP = 2;
}

message ResponseLB {
    map<string,double> ScoreMap = 1;
}

message NodeInfo {
    string ClusterName = 1;
    string NodeName = 2;
}

message ReponseNetwork {
    int64 RX = 1;
    int64 TX = 2;
}